PORT-02 se finaliza maquetado del componente Header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,7 +63,11 @@ const { title } = Astro.props;
 	.color-state-blue{
 		color: #8874F1;
 	}
+	.bg-state-blue{
+		background-color: #8874F1;
+	}
 	.color-photo-blue{
 		color: #C1EFFE;
+		background-color:#C1EFFE;
 	}
 </style>
