--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,23 +37,37 @@ import ListExp from "../components/ListExp.astro";
 			</div>		
 		</section>
 		<section
-			class="h-screen w-4/5"
+			class="h-screen w-full"
 		>	
-			<div class="w-3/6 m-auto">
-				<div class="w-5/6 text-7xl">
-					<p >Skill &</p>
-					<p>Experience</p>					
+			<div class="flex mx-10"
+			>
+				<div class="w-3/6">
+					<div class="text-7xl my-5">
+						<p >Skill &</p>
+						<p>Experience</p>					
+					</div>		
+					<span> A specialist in UI/UX A passion of mine is Design 			
+						A specialist in UI/UX A passion of mine is Design 
+						A specialist in UI/UX A passion of mine is Design </span>	
+					
+					<p class="text-4xl mt-5">Skills</p>
+					<span class="text-xs text-gray-400">Lenguajes de programacion:</span>
+					<div class="flex space-x-10">
+						<svg class="w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M320 104.5c171.4 0 303.2 72.2 303.2 151.5S491.3 407.5 320 407.5c-171.4 0-303.2-72.2-303.2-151.5S148.7 104.5 320 104.5m0-16.8C143.3 87.7 0 163 0 256s143.3 168.3 320 168.3S640 349 640 256 496.7 87.7 320 87.7zM218.2 242.5c-7.9 40.5-35.8 36.3-70.1 36.3l13.7-70.6c38 0 63.8-4.1 56.4 34.3zM97.4 350.3h36.7l8.7-44.8c41.1 0 66.6 3 90.2-19.1 26.1-24 32.9-66.7 14.3-88.1-9.7-11.2-25.3-16.7-46.5-16.7h-70.7L97.4 350.3zm185.7-213.6h36.5l-8.7 44.8c31.5 0 60.7-2.3 74.8 10.7 14.8 13.6 7.7 31-8.3 113.1h-37c15.4-79.4 18.3-86 12.7-92-5.4-5.8-17.7-4.6-47.4-4.6l-18.8 96.6h-36.5l32.7-168.6zM505 242.5c-8 41.1-36.7 36.3-70.1 36.3l13.7-70.6c38.2 0 63.8-4.1 56.4 34.3zM384.2 350.3H421l8.7-44.8c43.2 0 67.1 2.5 90.2-19.1 26.1-24 32.9-66.7 14.3-88.1-9.7-11.2-25.3-16.7-46.5-16.7H417l-32.8 168.7z"/></svg>
+						<svg class="w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM180.9 444.9c-33.7 0-53.2-17.4-63.2-38.5L152 385.7c6.6 11.7 12.6 21.6 27.1 21.6c13.8 0 22.6-5.4 22.6-26.5V237.7h42.1V381.4c0 43.6-25.6 63.5-62.9 63.5zm85.8-43L301 382.1c9 14.7 20.8 25.6 41.5 25.6c17.4 0 28.6-8.7 28.6-20.8c0-14.4-11.4-19.5-30.7-28l-10.5-4.5c-30.4-12.9-50.5-29.2-50.5-63.5c0-31.6 24.1-55.6 61.6-55.6c26.8 0 46 9.3 59.8 33.7L368 290c-7.2-12.9-15-18-27.1-18c-12.3 0-20.1 7.8-20.1 18c0 12.6 7.8 17.7 25.9 25.6l10.5 4.5c35.8 15.3 55.9 31 55.9 66.2c0 37.8-29.8 58.6-69.7 58.6c-39.1 0-64.4-18.6-76.7-43z"/></svg>
+						<svg class="w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M277.7 312.9c9.8-6.7 23.4-12.5 23.4-12.5s-38.7 7-77.2 10.2c-47.1 3.9-97.7 4.7-123.1 1.3-60.1-8 33-30.1 33-30.1s-36.1-2.4-80.6 19c-52.5 25.4 130 37 224.5 12.1zm-85.4-32.1c-19-42.7-83.1-80.2 0-145.8C296 53.2 242.8 0 242.8 0c21.5 84.5-75.6 110.1-110.7 162.6-23.9 35.9 11.7 74.4 60.2 118.2zm114.6-176.2c.1 0-175.2 43.8-91.5 140.2 24.7 28.4-6.5 54-6.5 54s62.7-32.4 33.9-72.9c-26.9-37.8-47.5-56.6 64.1-121.3zm-6.1 270.5a12.2 12.2 0 0 1 -2 2.6c128.3-33.7 81.1-118.9 19.8-97.3a17.3 17.3 0 0 0 -8.2 6.3 70.5 70.5 0 0 1 11-3c31-6.5 75.5 41.5-20.6 91.4zM348 437.4s14.5 11.9-15.9 21.2c-57.9 17.5-240.8 22.8-291.6 .7-18.3-7.9 16-19 26.8-21.3 11.2-2.4 17.7-2 17.7-2-20.3-14.3-131.3 28.1-56.4 40.2C232.8 509.4 401 461.3 348 437.4zM124.4 396c-78.7 22 47.9 67.4 148.1 24.5a185.9 185.9 0 0 1 -28.2-13.8c-44.7 8.5-65.4 9.1-106 4.5-33.5-3.8-13.9-15.2-13.9-15.2zm179.8 97.2c-78.7 14.8-175.8 13.1-233.3 3.6 0-.1 11.8 9.7 72.4 13.6 92.2 5.9 233.8-3.3 237.1-46.9 0 0-6.4 16.5-76.2 29.7zM260.6 353c-59.2 11.4-93.5 11.1-136.8 6.6-33.5-3.5-11.6-19.7-11.6-19.7-86.8 28.8 48.2 61.4 169.5 25.9a60.4 60.4 0 0 1 -21.1-12.8z"/></svg>
+					</div>					
 				</div>		
-			</div>		
-			<div class="w-3/6">
-				<div>
-					<ul aria-label="Colored activity feed" role="feed" class="relative flex flex-col gap-12 py-12 pl-8 before:absolute before:top-0 before:left-8 before:h-full before:border before:-translate-x-1/2 before:border-slate-200 before:border-dashed after:absolute after:top-6 after:left-8 after:bottom-6 after:border after:-translate-x-1/2 after:border-slate-200 ">
-						<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
-						<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
-						<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
-					  </ul>
-				</div>
-			</div>	
+				<div class="w-3/6">
+					<div>
+						<ul aria-label="Colored activity feed" role="feed" class="relative flex flex-col gap-12 py-12 pl-8 before:absolute before:top-0 before:left-8 before:h-full before:border before:-translate-x-1/2 before:border-slate-200 before:border-dashed after:absolute after:top-6 after:left-8 after:bottom-6 after:border after:-translate-x-1/2 after:border-slate-200 ">
+							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+						</ul>
+					</div>
+				</div>	
+			</div>			
 		</section>
 	</main>
 </Layout>
