PORT-05 Se termina section de experiencia y skills

--- a/src/components/ListExp.astro
+++ b/src/components/ListExp.astro
@@ -20,5 +20,6 @@ const {  title ,body, date ,urlImg  } = Astro.props;
     <div class="flex flex-col flex-1 gap-0">
       <h4 class="text-base font-medium text-slate-700"> {title} </h4>
       <p class="text-sm text-slate-500">{date}</p>
+      <p>{body}</p>
     </div>
 </li>
