--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,13 +37,13 @@ import ListExp from "../components/ListExp.astro";
 			</div>		
 		</section>
 		<section
-			class="h-screen w-full"
+			class="h-2/4 w-full "
 		>	
-			<div class="flex mx-10"
+			<div class="flex mx-10 space-x-5"
 			>
 				<div class="w-3/6">
 					<div class="text-7xl mt-28 mb-8">
-						<p >Skill &</p>
+						<p >Skill <span class="text-5xl">&</span></p>
 						<p>Experience</p>					
 					</div>		
 					<span> A specialist in UI/UX A passion of mine is Design 			
@@ -70,16 +70,21 @@ import ListExp from "../components/ListExp.astro";
 						<svg class="w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M0 32l34.9 395.8L192 480l157.1-52.2L384 32H0zm313.1 80l-4.8 47.3L193 208.6l-.3 .1h111.5l-12.8 146.6-98.2 28.7-98.8-29.2-6.4-73.9h48.9l3.2 38.3 52.6 13.3 54.7-15.4 3.7-61.6-166.3-.5v-.1l-.2 .1-3.6-46.3L193.1 162l6.5-2.7H76.7L70.9 112h242.2z"/></svg>
 					</div>
 				</div>		
-				<div class="mt-28 mx-auto">
+				<div class="mt-28 mx-auto w-3/6">
 					<div>
+						<p class="text-4xl mt-18 mb-8">Experience</p>
 						<ul aria-label="Colored activity feed" role="feed" class="relative flex flex-col gap-12 py-12 pl-8 before:absolute before:top-0 before:left-8 before:h-full before:border before:-translate-x-1/2 before:border-slate-200 before:border-dashed after:absolute after:top-6 after:left-8 after:bottom-6 after:border after:-translate-x-1/2 after:border-slate-200 ">
-							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
-							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
-							<ListExp title="UI/UX project created" body="Task list created for project" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+							<ListExp title="UI/UX project created" body="Task list created for project UI/UX project created UI/UX project created UI/UX project created" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+							<ListExp title="UI/UX project created" body="Task list created for project UI/UX project createdv UI/UX project created" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
+							<ListExp title="UI/UX project created" body="Task list created for projectUI/UX project created  s" date="07/01/2021" urlImg="./mcets_del_peru_logo.jpg"></ListExp>					
 						</ul>
 					</div>
 				</div>	
 			</div>			
+		</section>
+		<section class="h-2/4 w-full"
+		>
+		
 		</section>
 	</main>
 </Layout>
